# event_agent_reimp

./: .env.example  AGENTS.md  Dockerfile  b.sh  cdx.sh  cld.sh  pull.sh  push.sh  pyproject.toml  r.sh
.codex/: hooks.json
app/: __init__.py  agent_runtime.py  causal_diagnostics.py  data_profile.py  data_snapshot.py  evidence_packet.py  friends_loop.py  hypothesis_evolution.py  hypothesis_routing.py  maf_orchestration.py  main.py  matched_tests.py  multiple_testing.py  notebook_execution.py  notebook_knowledge_base.py  notebook_workspace.py  openai_reasoning.py  phase_regression.py  question_evolution.py  question_forum.py  question_reflection.py  question_tournament.py  reference_data.py  replication_audit.py  reporting.py  semantic_layer.py  statistical_execution.py  statistical_tests.py
docs/: data-card-final-runtime-files.md  installed-software.md  meta-approach.md  reimplementation-notes.md  technical-notes.html  technical-notes.md  thesis.html
scripts/: e2e.sh  record-demo.sh  run_correction_smoke.py  run_friends_loop_smoke.py  run_governance_smoke.py  run_maf_adapter_smoke.py  run_matched_smoke.py  run_openai_reasoning_smoke.py  run_phase_regression.py  run_question_forum_smoke.py  run_reference_data_smoke.py  run_replication_audit.py  run_semantic_smoke.py  run_statistical_execution_smoke.py  run_statistical_smoke.py  validate.sh
tests/: test_agent_runtime.py  test_causal_diagnostics.py  test_data_profile.py  test_data_snapshot.py  test_evidence_packet.py  test_friends_loop.py  test_hypothesis_routing.py  test_maf_orchestration.py  test_matched_tests.py  (+14 more)
(+937 files in other folders)
