[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "event-agent-reimplementation"
version = "0.1.0"
description = "Python-first event evidence workflow reimplementation."
readme = "docs/reimplementation-notes.md"
requires-python = ">=3.12"
dependencies = [
  "agent-framework>=1.9.0,<2.0.0",
  "ipykernel>=7.3.0,<8.0.0",
  "nbclient>=0.11.0,<1.0.0",
  "nbconvert>=7.17.0,<8.0.0",
  "nbformat>=5.10.0,<6.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=9.0.0,<10.0.0",
]

[project.scripts]
event-agent-packet = "app.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["app*"]
